--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
     <div class='todo-container'>
       <form id='todo-form'>
-        <input required type="text" placeholder='Write a To Do and Press Enter' />
+        <input class='todo-input' required type="text" placeholder='Write a To Do and Press Enter' />
       </form>
       <ul id='todo-list'></ul>
     </div>
