--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 <body>
   <header class='header'>
     <h1 class='hidden' id='greeting'></h1>
-    <div class="weather">
-      <span></span>
-      <span></span>
+    <div class='today-info'>
+      <h2 class='clock'></h2>
+      <div class="weather">
+        <span></span>
+        <span></span>
+      </div>
     </div>
-    <h2 class='clock'></h2>
   </header>
   <main>
     <div class='login-container'>
@@ -42,6 +44,7 @@
         <input class='todo-input' required type="text" placeholder='Write a To Do and Press Enter' />
       </form>
       <ul id='todo-list'></ul>
+      <button class='todo-close-button'></button>
     </div>
     <button class='todo-app-button'>
       <img src='./assets/img/todo-app.png'>TODO
