Update: single quotes에서 double quotes으로 변경

--- a/index.html
+++ b/index.html
@@ -8,23 +8,23 @@
   <link rel="stylesheet" href="./styles/footer.css" />
   <link rel="stylesheet" href="./styles/reset.css" />
   <link rel="stylesheet" href="./styles/common.css" />
-  <script defer src='./greeting.js'></script>
-  <script defer src='./clock.js'></script>
-  <script defer src='./quote.js'></script>
-  <script defer src='./background.js'></script>
-  <script defer src='./todo.js'></script>
-  <script defer src='./weather.js'></script>
-  <script defer src='./todo-app-click.js'></script>
+  <script defer src="./greeting.js"></script>
+  <script defer src="./clock.js"></script>
+  <script defer src="./quote.js"></script>
+  <script defer src="./background.js"></script>
+  <script defer src="./todo.js"></script>
+  <script defer src="./weather.js"></script>
+  <script defer src="./todo-app-click.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Jua&display=swap" rel="stylesheet" />
   <title>Vanilla Challenge</title>
 </head>
 <body>
-  <header class='header'>
-    <h1 class='hidden' id='greeting'></h1>
-    <div class='today-info'>
-      <h2 class='clock'></h2>
+  <header class="header">
+    <h1 class="hidden" id="greeting"></h1>
+    <div class="today-info">
+      <h2 class="clock"></h2>
       <div class="weather">
         <span></span>
         <span></span>
@@ -32,26 +32,26 @@
     </div>
   </header>
   <main>
-    <div class='login-container'>
-      <img class='heart' src="./assets/img/heart-emoji.png" alt="로그인아이콘" />
-      <form id='login-form'>
-        <input class='login-input' required type="text" placeholder='What is your name?' maxlength='15' />
-        <input class='login-button' type="submit" value='Log In' />
+    <div class="login-container">
+      <img class="heart" src="./assets/img/heart-emoji.png" alt="로그인아이콘" />
+      <form id="login-form">
+        <input class="login-input" required type="text" placeholder="What is your name?" maxlength="15" />
+        <input class="login-button" type="submit" value="Log In" />
       </form>
     </div>
-    <div class='todo-container'>
-      <form id='todo-form'>
-        <input class='todo-input' required type="text" placeholder='Write a To Do and Press Enter' />
+    <div class="todo-container">
+      <form id="todo-form">
+        <input class="todo-input" required type="text" placeholder="Write a To Do and Press Enter" />
       </form>
-      <ul id='todo-list'></ul>
-      <button class='todo-close-button'></button>
+      <ul id="todo-list"></ul>
+      <button class="todo-close-button"></button>
     </div>
-    <button class='todo-app-button'>
-      <img src='./assets/img/todo-app.png'>TODO
+    <button class="todo-app-button">
+      <img src="./assets/img/todo-app.png">TODO
     </button>
   </main>
-  <footer class='footer'>
-    <div class='quote'>
+  <footer class="footer">
+    <div class="quote">
       <p></p>
       <p></p>
     </div>
