Update: js 파일 폴더 생성하여 이동

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   <link rel="stylesheet" href="./styles/footer.css" />
   <link rel="stylesheet" href="./styles/reset.css" />
   <link rel="stylesheet" href="./styles/common.css" />
-  <script defer src="./greeting.js"></script>
-  <script defer src="./clock.js"></script>
-  <script defer src="./quote.js"></script>
-  <script defer src="./background.js"></script>
-  <script defer src="./todo.js"></script>
-  <script defer src="./weather.js"></script>
-  <script defer src="./todo-app-click.js"></script>
+  <script defer src="./js/greeting.js"></script>
+  <script defer src="./js/clock.js"></script>
+  <script defer src="./js/quote.js"></script>
+  <script defer src="./js/background.js"></script>
+  <script defer src="./js/todo.js"></script>
+  <script defer src="./js/weather.js"></script>
+  <script defer src="./js/todo-app-click.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Jua&display=swap" rel="stylesheet" />
-  <title>Vanilla Challenge</title>
+  <title>Momentum</title>
 </head>
 <body>
   <header class="header">
